turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:9: error: type mismatch;
 found   : java.awt.Color
 required: Int
      return c
             ^LangtonsAnt:7: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to n-1) {
         ^